# pdfysvg

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/pdfysvg/: __main__.py
src/pdfysvg/cli/: __init__.py  main.py
tests/: test_pdfysvg.py
