[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfysvg"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Junya Fukuda", email = "junya.fukuda.e@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "svglib",
  "reportlab",
]

[project.urls]
Documentation = "https://github.com/jrfk/pdfysvg#readme"
Issues = "https://github.com/jrfk/pdfysvg/issues"
Source = "https://github.com/jrfk/pdfysvg"

[project.scripts]
pdfysvg = "pdfysvg.cli:pdfysvg"

[tool.hatch.version]
path = "src/pdfysvg/__about__.py"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pdfysvg tests}"

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source_pkgs = ["pdfysvg", "tests"]
branch = true
parallel = true
omit = [
  "src/pdfysvg/__about__.py",
]

[tool.coverage.paths]
pdfysvg = ["src/pdfysvg", "*/pdfysvg/src/pdfysvg"]
tests = ["tests", "*/pdfysvg/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.docs]
extra-dependencies = [
  "sphinx",
  "sphinx_material",
]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build -M html docs/source docs/build"

[tool.ruff]
exclude = ["docs"]
